BUILD file fixes.

--- a/datasets/me_db/tests/acceptance_tests/BUILD
+++ b/datasets/me_db/tests/acceptance_tests/BUILD
@@ -25,6 +25,7 @@ py_test(
 
 py_library(
     name = "flags",
+    testonly = 1,
     srcs = ["flags.py"],
     deps = [
         "//datasets/me_db",
