Temporarily disable vizdoom.

--- a/tools/requirements.txt
+++ b/tools/requirements.txt
@@ -151,7 +151,8 @@ trash-cli==0.17.1.14
 umap==0.1.1
 urllib3==1.22
 virtualenv==15.1.0
-vizdoom==1.1.6
+# FIXME(cec): Missing dependencies on ubuntu build.
+# vizdoom==1.1.6
 wcwidth==0.1.7
 webencodings==0.5.1
 wget==3.2
