Work in progress on bytecode from src.

--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -35,10 +35,10 @@ py_library(
     ],
     deps = [
         ":utils",
+        "//compilers/llvm:clang",
         "//datasets/opencl/device_mapping:opencl_device_mapping_dataset",
         "//deeplearning/clgen/corpuses:atomizers",
         "//deeplearning/ncc:task_utils",
-        "//experimental/compilers/reachability:cfg_datasets",
         "//labm8:labtypes",
         "//third_party/py/absl",
         "//third_party/py/keras",
