--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/BUILD
@@ -40,9 +40,12 @@ py_library(
         "//deeplearning/clgen/corpuses:atomizers",
         "//deeplearning/clgen/preprocessors:opencl",
         "//deeplearning/ncc:task_utils",
+        "//experimental/compilers/reachability:llvm_util",
         "//labm8:labtypes",
         "//third_party/py/absl",
+        "//third_party/py/graph_nets",
         "//third_party/py/keras",
+        "//third_party/py/networkx",
         "//third_party/py/numpy",
         "//third_party/py/pandas",
         "//third_party/py/progressbar",
