Work in progress on alice.

--- a/alice/BUILD
+++ b/alice/BUILD
@@ -4,6 +4,9 @@ load("@org_pubref_rules_protobuf//python:rules.bzl", "py_proto_library")
 
 py_proto_library(
     name = "alice_py_pb2",
+    proto_deps = [
+        "//config/proto:config",
+    ],
     protos = ["alice.proto"],
     with_grpc = True,
     deps = ["//third_party/py/protobuf"],
