--- a/deeplearning/deeptune/opencl/heterogeneous_mapping/models/BUILD
+++ b/deeplearning/deeptune/opencl/heterogeneous_mapping/models/BUILD
@@ -59,8 +59,7 @@ py_test(
     srcs = ["lda_test.py"],
     deps = [
         ":models",
-        "//datasets/opencl/device_mapping:opencl_device_mapping_dataset",
-        "//deeplearning/deeptune/opencl/heterogeneous_mapping:utils",
+        "//deeplearning/deeptune/opencl/heterogeneous_mapping:conftest",
         "//experimental/compilers/reachability:llvm_util",
         "//labm8:test",
         "//third_party/py/networkx",
