Work in progress on training models.

--- a/docs/wip_graph/notebooks/BUILD
+++ b/docs/wip_graph/notebooks/BUILD
@@ -13,3 +13,17 @@ py_binary(
         "//experimental/compilers/reachability:control_flow_graph_generator",
     ],
 )
+
+py_binary(
+    name = "04_train_model",
+    srcs = ["04_train_model.py"],
+    deps = [
+        "//deeplearning/deeptune/opencl/heterogeneous_mapping:utils",
+        "//deeplearning/deeptune/opencl/heterogeneous_mapping/models",
+        "//labm8:prof",
+        "//third_party/py/absl",
+        "//third_party/py/graph_nets",
+        "//third_party/py/pandas",
+        "//third_party/py/tensorflow",
+    ],
+)
