Temporarily disable work-in-progress test.

--- a/maker/arduino/lcd_hello_world/BUILD
+++ b/maker/arduino/lcd_hello_world/BUILD
@@ -14,15 +14,16 @@ cc_library(
 )
 
 # A C++ test of lcd_hello_world logic using mock Arduino interface.
-cc_test(
-    name = "lcd_hello_world_test",
-    srcs = ["lcd_hello_world_test.cc"],
-    deps = [
-        ":lcd_hello_world",
-        "//maker/arduino/interface:mock_arduino_interface",
-        "//phd:test",
-    ],
-)
+# TODO(cec): Re-enable after LiquidCrystalInterface has been implemented.
+#cc_test(
+#    name = "lcd_hello_world_test",
+#    srcs = ["lcd_hello_world_test.cc"],
+#    deps = [
+#        ":lcd_hello_world",
+#        "//maker/arduino/interface:mock_arduino_interface",
+#        "//phd:test",
+#    ],
+#)
 
 # The lcd_hello_world implementation as a library for PlatformIO projects.
 platformio_library(
